--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+
+#http://localhost:8080/h2-console
+
+#Não mostra o stacktrace quando acontece um errro
+server.error.include-stacktrace=never
+server.error.include-message=never
