--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 #Nao mostra o stacktrace quando acontece um errro
 server.error.include-stacktrace=never
